--- a/clusters.html
+++ b/clusters.html
@@ -45,7 +45,7 @@
     <tr id="sec0">
      <td>
       <p>
-       <b>Cluster 0</b>
+       <b>Same-sex marriage in British Overseas Territories</b>
       </p>
      </td>
      <td>
@@ -77,230 +77,16 @@
     <tr id="sec1">
      <td>
       <p>
-       <b>Cluster 1</b>
+       <b>Same-sex marriage in different countries</b>
       </p>
      </td>
      <td>
       <ul style="list-style-type: none;">
-       <li>
-        <a href="docs.html#sec-1">Artificial insemination</a>
-       </li>
-       <li>
-        <a href="docs.html#sec5">Civil and political rights</a>
-       </li>
-       <li>
-        <a href="docs.html#sec8">Zygote</a>
-       </li>
-       <li>
-        <a href="docs.html#sec15">Sex reassignment surgery</a>
-       </li>
-       <li>
-        <a href="docs.html#sec16">Gender Recognition Act 2004</a>
-       </li>
-       <li>
-        <a href="docs.html#sec17">History of same-sex unions</a>
-       </li>
-       <li>
-        <a href="docs.html#sec18">Homosexuality in ancient Rome</a>
-       </li>
-       <li>
-        <a href="docs.html#sec22">Interracial marriage in the United States</a>
-       </li>
-       <li>
-        <a href="docs.html#sec23">Intersex</a>
-       </li>
-       <li>
-        <a href="docs.html#sec25">LGBT rights by country or territory</a>
-       </li>
-       <li>
-        <a href="docs.html#sec28">Marriage</a>
-       </li>
-       <li>
-        <a href="docs.html#sec31">Marriage certificate</a>
-       </li>
-       <li>
-        <a href="docs.html#sec32">Marriage law</a>
-       </li>
-       <li>
-        <a href="docs.html#sec33">Marriage license</a>
-       </li>
-       <li>
-        <a href="docs.html#sec115">Section Nine of the Constitution of South Africa</a>
-       </li>
-       <li>
-        <a href="docs.html#sec118">Transgender</a>
-       </li>
-      </ul>
-     </td>
-    </tr>
-    <tr id="sec2">
-     <td>
-      <p>
-       <b>Cluster 2</b>
-      </p>
-     </td>
-     <td>
-      <ul style="list-style-type: none;">
-       <li>
-        <a href="docs.html#sec0">Canadians for Equal Marriage</a>
-       </li>
-       <li>
-        <a href="docs.html#sec6">Defense of Marriage Act</a>
-       </li>
-       <li>
-        <a href="docs.html#sec9">Fifth Amendment to the United States Constitution</a>
-       </li>
-       <li>
-        <a href="docs.html#sec10">Fourteenth Amendment to the United States Constitution</a>
-       </li>
-       <li>
-        <a href="docs.html#sec12">Freedom to Marry</a>
-       </li>
-       <li>
-        <a href="docs.html#sec13">Fundamental rights</a>
-       </li>
-       <li>
-        <a href="docs.html#sec19">Inter-American Commission on Human Rights</a>
-       </li>
-       <li>
-        <a href="docs.html#sec20">Inter-American Court of Human Rights</a>
-       </li>
-       <li>
-        <a href="docs.html#sec21">International organization</a>
-       </li>
-       <li>
-        <a href="docs.html#sec34">National Registry of Identification and Civil Status</a>
-       </li>
-       <li>
-        <a href="docs.html#sec40">Recognition of same-sex unions in Costa Rica</a>
-       </li>
-       <li>
-        <a href="docs.html#sec43">Recognition of same-sex unions in Ecuador</a>
-       </li>
-       <li>
-        <a href="docs.html#sec54">Recognition of same-sex unions in the Americas</a>
-       </li>
-       <li>
-        <a href="docs.html#sec61">Same-sex marriage in Baja California</a>
-       </li>
-       <li>
-        <a href="docs.html#sec63">Same-sex marriage in Brazil</a>
-       </li>
-       <li>
-        <a href="docs.html#sec65">Same-sex marriage in California</a>
-       </li>
-       <li>
-        <a href="docs.html#sec66">Same-sex marriage in Campeche</a>
-       </li>
-       <li>
-        <a href="docs.html#sec68">Same-sex marriage in Chiapas</a>
-       </li>
-       <li>
-        <a href="docs.html#sec69">Same-sex marriage in Chihuahua</a>
-       </li>
-       <li>
-        <a href="docs.html#sec70">Same-sex marriage in Coahuila</a>
-       </li>
-       <li>
-        <a href="docs.html#sec71">Same-sex marriage in Colima</a>
-       </li>
-       <li>
-        <a href="docs.html#sec72">Same-sex marriage in Colombia</a>
-       </li>
-       <li>
-        <a href="docs.html#sec73">Recognition of same-sex unions in Costa Rica</a>
-       </li>
-       <li>
-        <a href="docs.html#sec80">Same-sex marriage in Hawaii</a>
-       </li>
-       <li>
-        <a href="docs.html#sec82">Same-sex marriage in Illinois</a>
-       </li>
-       <li>
-        <a href="docs.html#sec83">Same-sex marriage in Jalisco</a>
-       </li>
-       <li>
-        <a href="docs.html#sec86">Same-sex marriage in Mexico</a>
-       </li>
-       <li>
-        <a href="docs.html#sec87">Same-sex marriage in Mexico City</a>
-       </li>
-       <li>
-        <a href="docs.html#sec88">Same-sex marriage in Morelos</a>
-       </li>
-       <li>
-        <a href="docs.html#sec89">Same-sex marriage in Nayarit</a>
-       </li>
-       <li>
-        <a href="docs.html#sec90">Same-sex marriage in Nevada</a>
-       </li>
-       <li>
-        <a href="docs.html#sec91">Same-sex marriage in New Jersey</a>
-       </li>
-       <li>
-        <a href="docs.html#sec94">Same-sex marriage in Ontario</a>
-       </li>
-       <li>
-        <a href="docs.html#sec95">Same-sex marriage in Oregon</a>
-       </li>
-       <li>
-        <a href="docs.html#sec97">Same-sex marriage in Puebla</a>
-       </li>
-       <li>
-        <a href="docs.html#sec98">Same-sex marriage in Quintana Roo</a>
-       </li>
-       <li>
-        <a href="docs.html#sec113">Same-sex marriage in the United States</a>
-       </li>
-       <li>
-        <a href="docs.html#sec114">Section 15 of the Canadian Charter of Rights and Freedoms</a>
-       </li>
-      </ul>
-     </td>
-    </tr>
-    <tr id="sec3">
-     <td>
-      <p>
-       <b>Cluster 3</b>
-      </p>
-     </td>
-     <td>
-      <ul style="list-style-type: none;">
-       <li>
-        <a href="docs.html#sec1">Civil Marriage Act</a>
-       </li>
-       <li>
-        <a href="docs.html#sec2">Civil Union Act, 2006</a>
-       </li>
-       <li>
-        <a href="docs.html#sec3">Civil union</a>
-       </li>
-       <li>
-        <a href="docs.html#sec4">Civil partnership in the United Kingdom</a>
-       </li>
-       <li>
-        <a href="docs.html#sec7">Domestic Partnership Act 2018</a>
-       </li>
        <li>
         <a href="docs.html#sec11">Free Democratic Party (Germany)</a>
        </li>
        <li>
-        <a href="docs.html#sec14">LGBT adoption</a>
-       </li>
-       <li>
-        <a href="docs.html#sec24">LGBT adoption</a>
-       </li>
-       <li>
         <a href="docs.html#sec26">LGBT rights in San Marino</a>
-       </li>
-       <li>
-        <a href="docs.html#sec27">Legal consequences of marriage and civil partnership in England and Wales</a>
-       </li>
-       <li>
-        <a href="docs.html#sec29">Marriage (Same Sex Couples) Act 2013</a>
-       </li>
-       <li>
-        <a href="docs.html#sec30">Marriage and Civil Partnership (Scotland) Act 2014</a>
        </li>
        <li>
         <a href="docs.html#sec35">Public opinion of same-sex marriage in the United States</a>
@@ -316,12 +102,6 @@
        </li>
        <li>
         <a href="docs.html#sec39">Recognition of same-sex unions in Chile</a>
-       </li>
-       <li>
-        <a href="docs.html#sec41">Recognition of same-sex unions in Croatia</a>
-       </li>
-       <li>
-        <a href="docs.html#sec42">Recognition of same-sex unions in Cyprus</a>
        </li>
        <li>
         <a href="docs.html#sec44">Recognition of same-sex unions in Estonia</a>
@@ -342,9 +122,6 @@
         <a href="docs.html#sec49">Recognition of same-sex unions in Japan</a>
        </li>
        <li>
-        <a href="docs.html#sec50">Recognition of same-sex unions in Liechtenstein</a>
-       </li>
-       <li>
         <a href="docs.html#sec51">Recognition of same-sex unions in Poland</a>
        </li>
        <li>
@@ -360,16 +137,16 @@
         <a href="docs.html#sec58">Same-sex marriage in Argentina</a>
        </li>
        <li>
-        <a href="docs.html#sec59">Same-sex marriage in Australia</a>
-       </li>
-       <li>
         <a href="docs.html#sec60">Same-sex marriage in Austria</a>
        </li>
        <li>
         <a href="docs.html#sec62">Same-sex marriage in Belgium</a>
        </li>
        <li>
-        <a href="docs.html#sec67">Same-sex marriage in Canada</a>
+        <a href="docs.html#sec63">Same-sex marriage in Brazil</a>
+       </li>
+       <li>
+        <a href="docs.html#sec72">Same-sex marriage in Colombia</a>
        </li>
        <li>
         <a href="docs.html#sec74">Same-sex marriage in Denmark</a>
@@ -384,12 +161,6 @@
         <a href="docs.html#sec77">Same-sex marriage in Germany</a>
        </li>
        <li>
-        <a href="docs.html#sec78">Same-sex marriage in Gibraltar</a>
-       </li>
-       <li>
-        <a href="docs.html#sec79">Same-sex marriage in Guernsey</a>
-       </li>
-       <li>
         <a href="docs.html#sec81">Same-sex marriage in Iceland</a>
        </li>
        <li>
@@ -397,6 +168,9 @@
        </li>
        <li>
         <a href="docs.html#sec85">Same-sex marriage in Malta</a>
+       </li>
+       <li>
+        <a href="docs.html#sec87">Same-sex marriage in Mexico City</a>
        </li>
        <li>
         <a href="docs.html#sec92">Same-sex marriage in New Zealand</a>
@@ -411,9 +185,6 @@
         <a href="docs.html#sec99">Recognition of same-sex unions in Romania</a>
        </li>
        <li>
-        <a href="docs.html#sec100">Same-sex marriage in South Africa</a>
-       </li>
-       <li>
         <a href="docs.html#sec101">Same-sex marriage in Spain</a>
        </li>
        <li>
@@ -426,10 +197,174 @@
         <a href="docs.html#sec104">Same-sex marriage in Uruguay</a>
        </li>
        <li>
-        <a href="docs.html#sec108">Same-sex marriage in the Isle of Man</a>
+        <a href="docs.html#sec109">Same-sex marriage in the Netherlands</a>
        </li>
        <li>
-        <a href="docs.html#sec109">Same-sex marriage in the Netherlands</a>
+        <a href="docs.html#sec116">Slovenian same-sex marriage referendum, 2015</a>
+       </li>
+      </ul>
+     </td>
+    </tr>
+    <tr id="sec2">
+     <td>
+      <p>
+       <b>Same-sex marriage in South America</b>
+      </p>
+     </td>
+     <td>
+      <ul style="list-style-type: none;">
+       <li>
+        <a href="docs.html#sec19">Inter-American Commission on Human Rights</a>
+       </li>
+       <li>
+        <a href="docs.html#sec20">Inter-American Court of Human Rights</a>
+       </li>
+       <li>
+        <a href="docs.html#sec40">Recognition of same-sex unions in Costa Rica</a>
+       </li>
+       <li>
+        <a href="docs.html#sec43">Recognition of same-sex unions in Ecuador</a>
+       </li>
+       <li>
+        <a href="docs.html#sec54">Recognition of same-sex unions in the Americas</a>
+       </li>
+       <li>
+        <a href="docs.html#sec73">Recognition of same-sex unions in Costa Rica</a>
+       </li>
+      </ul>
+     </td>
+    </tr>
+    <tr id="sec3">
+     <td>
+      <p>
+       <b>LGBT adoption</b>
+      </p>
+     </td>
+     <td>
+      <ul style="list-style-type: none;">
+       <li>
+        <a href="docs.html#sec14">LGBT adoption</a>
+       </li>
+       <li>
+        <a href="docs.html#sec24">LGBT adoption</a>
+       </li>
+      </ul>
+     </td>
+    </tr>
+    <tr id="sec4">
+     <td>
+      <p>
+       <b>Same-sex marriage in Mexican states</b>
+      </p>
+     </td>
+     <td>
+      <ul style="list-style-type: none;">
+       <li>
+        <a href="docs.html#sec61">Same-sex marriage in Baja California</a>
+       </li>
+       <li>
+        <a href="docs.html#sec66">Same-sex marriage in Campeche</a>
+       </li>
+       <li>
+        <a href="docs.html#sec68">Same-sex marriage in Chiapas</a>
+       </li>
+       <li>
+        <a href="docs.html#sec69">Same-sex marriage in Chihuahua</a>
+       </li>
+       <li>
+        <a href="docs.html#sec70">Same-sex marriage in Coahuila</a>
+       </li>
+       <li>
+        <a href="docs.html#sec71">Same-sex marriage in Colima</a>
+       </li>
+       <li>
+        <a href="docs.html#sec83">Same-sex marriage in Jalisco</a>
+       </li>
+       <li>
+        <a href="docs.html#sec86">Same-sex marriage in Mexico</a>
+       </li>
+       <li>
+        <a href="docs.html#sec88">Same-sex marriage in Morelos</a>
+       </li>
+       <li>
+        <a href="docs.html#sec89">Same-sex marriage in Nayarit</a>
+       </li>
+       <li>
+        <a href="docs.html#sec97">Same-sex marriage in Puebla</a>
+       </li>
+       <li>
+        <a href="docs.html#sec98">Same-sex marriage in Quintana Roo</a>
+       </li>
+      </ul>
+     </td>
+    </tr>
+    <tr id="sec5">
+     <td>
+      <p>
+       <b>Same-sex unions and rights</b>
+      </p>
+     </td>
+     <td>
+      <ul style="list-style-type: none;">
+       <li>
+        <a href="docs.html#sec-1">Artificial insemination</a>
+       </li>
+       <li>
+        <a href="docs.html#sec2">Civil Union Act, 2006</a>
+       </li>
+       <li>
+        <a href="docs.html#sec3">Civil union</a>
+       </li>
+       <li>
+        <a href="docs.html#sec4">Civil partnership in the United Kingdom</a>
+       </li>
+       <li>
+        <a href="docs.html#sec5">Civil and political rights</a>
+       </li>
+       <li>
+        <a href="docs.html#sec7">Domestic Partnership Act 2018</a>
+       </li>
+       <li>
+        <a href="docs.html#sec8">Zygote</a>
+       </li>
+       <li>
+        <a href="docs.html#sec21">International organization</a>
+       </li>
+       <li>
+        <a href="docs.html#sec27">Legal consequences of marriage and civil partnership in England and Wales</a>
+       </li>
+       <li>
+        <a href="docs.html#sec29">Marriage (Same Sex Couples) Act 2013</a>
+       </li>
+       <li>
+        <a href="docs.html#sec30">Marriage and Civil Partnership (Scotland) Act 2014</a>
+       </li>
+       <li>
+        <a href="docs.html#sec34">National Registry of Identification and Civil Status</a>
+       </li>
+       <li>
+        <a href="docs.html#sec41">Recognition of same-sex unions in Croatia</a>
+       </li>
+       <li>
+        <a href="docs.html#sec42">Recognition of same-sex unions in Cyprus</a>
+       </li>
+       <li>
+        <a href="docs.html#sec50">Recognition of same-sex unions in Liechtenstein</a>
+       </li>
+       <li>
+        <a href="docs.html#sec59">Same-sex marriage in Australia</a>
+       </li>
+       <li>
+        <a href="docs.html#sec78">Same-sex marriage in Gibraltar</a>
+       </li>
+       <li>
+        <a href="docs.html#sec79">Same-sex marriage in Guernsey</a>
+       </li>
+       <li>
+        <a href="docs.html#sec100">Same-sex marriage in South Africa</a>
+       </li>
+       <li>
+        <a href="docs.html#sec108">Same-sex marriage in the Isle of Man</a>
        </li>
        <li>
         <a href="docs.html#sec111">Same-sex marriage in the Republic of Ireland</a>
@@ -438,10 +373,141 @@
         <a href="docs.html#sec112">Same-sex marriage in the United Kingdom</a>
        </li>
        <li>
-        <a href="docs.html#sec116">Slovenian same-sex marriage referendum, 2015</a>
+        <a href="docs.html#sec117">Thirty-fourth Amendment of the Constitution of Ireland</a>
+       </li>
+      </ul>
+     </td>
+    </tr>
+    <tr id="sec6">
+     <td>
+      <p>
+       <b>Same-sex marriage constitutions</b>
+      </p>
+     </td>
+     <td>
+      <ul style="list-style-type: none;">
+       <li>
+        <a href="docs.html#sec0">Canadians for Equal Marriage</a>
        </li>
        <li>
-        <a href="docs.html#sec117">Thirty-fourth Amendment of the Constitution of Ireland</a>
+        <a href="docs.html#sec1">Civil Marriage Act</a>
+       </li>
+       <li>
+        <a href="docs.html#sec6">Defense of Marriage Act</a>
+       </li>
+       <li>
+        <a href="docs.html#sec9">Fifth Amendment to the United States Constitution</a>
+       </li>
+       <li>
+        <a href="docs.html#sec10">Fourteenth Amendment to the United States Constitution</a>
+       </li>
+       <li>
+        <a href="docs.html#sec12">Freedom to Marry</a>
+       </li>
+       <li>
+        <a href="docs.html#sec13">Fundamental rights</a>
+       </li>
+       <li>
+        <a href="docs.html#sec65">Same-sex marriage in California</a>
+       </li>
+       <li>
+        <a href="docs.html#sec67">Same-sex marriage in Canada</a>
+       </li>
+       <li>
+        <a href="docs.html#sec80">Same-sex marriage in Hawaii</a>
+       </li>
+       <li>
+        <a href="docs.html#sec82">Same-sex marriage in Illinois</a>
+       </li>
+       <li>
+        <a href="docs.html#sec90">Same-sex marriage in Nevada</a>
+       </li>
+       <li>
+        <a href="docs.html#sec91">Same-sex marriage in New Jersey</a>
+       </li>
+       <li>
+        <a href="docs.html#sec94">Same-sex marriage in Ontario</a>
+       </li>
+       <li>
+        <a href="docs.html#sec95">Same-sex marriage in Oregon</a>
+       </li>
+       <li>
+        <a href="docs.html#sec113">Same-sex marriage in the United States</a>
+       </li>
+       <li>
+        <a href="docs.html#sec114">Section 15 of the Canadian Charter of Rights and Freedoms</a>
+       </li>
+       <li>
+        <a href="docs.html#sec115">Section Nine of the Constitution of South Africa</a>
+       </li>
+      </ul>
+     </td>
+    </tr>
+    <tr id="sec7">
+     <td>
+      <p>
+       <b>Marriage</b>
+      </p>
+     </td>
+     <td>
+      <ul style="list-style-type: none;">
+       <li>
+        <a href="docs.html#sec22">Interracial marriage in the United States</a>
+       </li>
+       <li>
+        <a href="docs.html#sec28">Marriage</a>
+       </li>
+       <li>
+        <a href="docs.html#sec31">Marriage certificate</a>
+       </li>
+       <li>
+        <a href="docs.html#sec32">Marriage law</a>
+       </li>
+       <li>
+        <a href="docs.html#sec33">Marriage license</a>
+       </li>
+      </ul>
+     </td>
+    </tr>
+    <tr id="sec8">
+     <td>
+      <p>
+       <b>History of same-sex marriage</b>
+      </p>
+     </td>
+     <td>
+      <ul style="list-style-type: none;">
+       <li>
+        <a href="docs.html#sec17">History of same-sex unions</a>
+       </li>
+       <li>
+        <a href="docs.html#sec18">Homosexuality in ancient Rome</a>
+       </li>
+       <li>
+        <a href="docs.html#sec25">LGBT rights by country or territory</a>
+       </li>
+      </ul>
+     </td>
+    </tr>
+    <tr id="sec9">
+     <td>
+      <p>
+       <b>Transgender</b>
+      </p>
+     </td>
+     <td>
+      <ul style="list-style-type: none;">
+       <li>
+        <a href="docs.html#sec15">Sex reassignment surgery</a>
+       </li>
+       <li>
+        <a href="docs.html#sec16">Gender Recognition Act 2004</a>
+       </li>
+       <li>
+        <a href="docs.html#sec23">Intersex</a>
+       </li>
+       <li>
+        <a href="docs.html#sec118">Transgender</a>
        </li>
       </ul>
      </td>
